--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Directory</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="test">   
+    <h1>PV's: Favorite Food & Recipes</h1>
+    <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/C4C7/production/_118257305_ce33056a-d3fc-4ba3-a302-c454ed819808.jpg.webp">
     
-    <h1>Pedro's Favorite Food & Recipes</h1>
-    <img width="500" height="250" src="https://ichef.bbci.co.uk/news/976/cpsprodpb/C4C7/production/_118257305_ce33056a-d3fc-4ba3-a302-c454ed819808.jpg.webp">
-
-    <li>
-        <a href="recipes/cheese_burger.html">Cheese Burger</a>
-    </li>    
-    <li>
-    <a href="recipes/pizza.html">Cheese Pizza</a>
-    </li>    
+    <div class="tables">
+    <li style="display:inline-block;"><a href="recipes/cheese_burger.html">Cheese Burger</a></li>    
+    <li style="display:inline-block;"> <a href="recipes/pizza.html" >Cheese Pizza</a></li>
+    </div>
+</div>    
 </body>
 </html>
