--- a/recipes/cheese_burger.html
+++ b/recipes/cheese_burger.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheese Burger Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         <input type="button" value="Back!" onclick="history.back()">
     </form>
     <h1>The Almighty Cheese Burger</h1>
-    <img width="275" height="200"
+    <img class="center"
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cheeseburger.jpg/1200px-Cheeseburger.jpg"
         alt="Picture of a hearty cheese burger">
 
@@ -23,24 +24,28 @@
         meat patty. The cheese is usually added to the cooking hamburger patty shortly before serving. A burger is a
         flat round mass of minced meat or vegetables, which is fried and often eaten in a bread roll
     </p>
-    <h3>Ingredients</h3>
-    <ol>2 pounds freshly ground chuck (At least 80% lean)</ol>
-    <ol>1 tablespoon onion powder</ol>
-    <ol>1 teaspoon salt</ol>
-    <ol>1 teaspoon freshly ground black pepper</ol>
-    <ol>12 slices deli-counter American cheese</ol>    
-    <ol>6 large burger buns, preferably homemade, (toasted if desired)</ol>
+    <h3>Ingredients</h3> 
+    <div class="test">
+        <ol>1 Teaspoon salt</ol>
+        <ol>1 Tablespoon onion powder</ol>
+        <ol>2 Pounds freshly ground chuck</ol>
+        <ol>1 Teaspoon freshly ground black pepper</ol>
+        <ol>12 Slices deli-counter American cheese</ol>    
+        <ol>6 Large burger buns, preferably homemade</ol>
+    </div>    
 
-    <h2>To Garnish</h2>
-    <ol>ketchup</ol> 
-    <ol>mayonnaise</ol> 
-    <ol>thousand island dressing</ol> 
-    <ol>sliced red onion</ol> 
-    <ol>sliced tomatoes</ol> 
-    <ol>sliced pickles</ol> 
-    <ol>fresh lettuce leaves</ol> 
+    <h2>Garnish</h2>
+    <div class="test">
+        <ol>Ketchup</ol> 
+        <ol>Mayonnaise</ol> 
+        <ol>Sliced pickles</ol>
+        <ol>Sliced tomatoes</ol> 
+        <ol>Sliced red onion</ol>  
+        <ol>Fresh lettuce leaves</ol> 
+        <ol>Thousand island dressing</ol> 
+    </div>
 
-    <h3>The Steps</h3>
+    <h2>The Steps</h2>
     <ol>
     <li>In a large bowl, mix ground beef, onion powder, salt and pepper until just combined. Do not overmix, or your patties will be tough.</li>
     <li>Divide into six portions and form patties, without pressing too hard. They should be uniform in thickness. Smooth out any cracks using your fingers. Make these right before you grill them, so they stay at room temperature.</li>
